--- a/src/components/Search/Search.scss
+++ b/src/components/Search/Search.scss
@@ -1,3 +1,4 @@
+$break-small: 400px;
 
 .search {
   background: rgba(255, 255, 255, .1);
@@ -7,6 +8,10 @@
   padding: .2em;
   color: #fff;
   border-radius: 2px;
-  width: 100%;
-  margin: 0 2em;
+  width: 80%;
+  margin: 0 auto;
+
+  @media screen and (max-width: $break-small) {
+    margin: 1em 0;
+  }
 }
