--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,4 @@
+$break-small: 400px;
 
 * {
   margin: 0;
@@ -8,12 +9,15 @@
 html, body {
   width: 100%;
   font-size: 14px;
+  @media screen and (max-width: $break-small) {
+    font-size: 16px;
+  }
 }
 
 .app {
   background: #090b0e;
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
 }
 
   .filter-bar {
@@ -21,8 +25,16 @@ html, body {
     align-items: center;
     padding-top: 1em;
     padding-bottom: 1em;
+    overflow: hidden;
+    @media screen and (max-width: $break-small) {
+      flex-wrap: wrap;
+    }
   }
 
   .filter-bar > * {
     flex: 1;
+    text-align: center;
+    @media screen and (max-width: $break-small) {
+      flex-basis: 100%;
+    }
   }
